# docs/swagger.yaml
@@ -18,11 +18,6 @@ definitions:
     required:
     - prompt
     type: object
-  handler.UpdateAccountHealthRequest:
-    properties:
-      health:
-        type: string
-    type: object
   response.Response:
     properties:
       code:
@@ -32,6 +27,21 @@ definitions:
         type: string
       message:
         type: string
+    type: object
+  service.CreateAccountRequest:
+    properties:
+      channel_id:
+        type: string
+      concurrent_limit:
+        type: integer
+      guild_id:
+        type: string
+      user_token:
+        type: string
+    required:
+    - channel_id
+    - guild_id
+    - user_token
     type: object
   service.TaskActionRequest:
     properties:
@@ -86,51 +96,44 @@ paths:
       summary: List accounts
       tags:
       - Account
-  /api/v1/accounts/{id}/health:
-    get:
-      description: Check the health status of the specified account
-      parameters:
-      - description: Account ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
+    post:
+      consumes:
       - application/json
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: '#/definitions/response.Response'
-        "400":
-          description: Bad request
-          schema:
-            $ref: '#/definitions/response.Response'
-        "404":
-          description: Account not found
-          schema:
-            $ref: '#/definitions/response.Response'
-        "500":
-          description: Internal server error
-          schema:
-            $ref: '#/definitions/response.Response'
-      summary: Check account health
-      tags:
-      - Account
-    put:
-      description: Manually update the health status of the specified account
+      description: Create a new Discord account and start its listener
       parameters:
-      - description: Account ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      - description: Update request
+      - description: Account info
         in: body
         name: request
         required: true
         schema:
-          $ref: '#/definitions/handler.UpdateAccountHealthRequest'
+          $ref: '#/definitions/service.CreateAccountRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: '#/definitions/response.Response'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Create account
+      tags:
+      - Account
+  /api/v1/accounts/{id}:
+    delete:
+      description: Delete the specified account and stop its listener
+      parameters:
+      - description: Account ID
+        in: path
+        name: id
+        required: true
+        type: integer
       produces:
       - application/json
       responses:
@@ -150,7 +153,7 @@ paths:
           description: Internal server error
           schema:
             $ref: '#/definitions/response.Response'
-      summary: Update account health
+      summary: Delete account
       tags:
       - Account
   /api/v1/tasks:
